z-index fixes for maximum compatability. responsive fixes for rock modals and scrolling ability

--- a/Styles/RockUtils.css
+++ b/Styles/RockUtils.css
@@ -240,7 +240,7 @@ img.jcrop-preview {
   position: absolute;
   top: 2px;
   width: 26px;
-  z-index: 9005 !important;
+  z-index: 2005 !important;
 }
 .block-instance.outline {
   min-height: 36px;
@@ -477,6 +477,9 @@ body.modal-open,
   .modal.container {
     width: 1170px;
     margin-left: -585px;
+	  padding: 15px;
+	  max-height: 90%;
+	  border-radius: 15px;
   }
 }
 @media (max-width: 979px) {
@@ -2559,6 +2562,8 @@ tr.row-highlight td {
 .lava-debug {
   clear: both;
   margin-top: 24px;
+	max-height: 500px;
+	overflow-y: auto;
 }
 .lava-debug code {
   background-color: #c4e3f3;
